K8S/microservices/weather-service/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  selector:
    app: weather-microservice
  ports:
    - port: 8080
      protocol: TCP
      targetPort: weather-port
